docs/spec/grammar/conformance/reject/21-empty-hex-bytes.myc
// rejected: an empty `0x` byte-string literal carries no value — a never-silent lex refusal, never a
// silently-empty token (RFC-0032 D4, M-750).
nodule bad;
fn f() => Bytes = 0x
